src/objects/PV_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <description>PSA-CLD-USNONE - Active</description>
        <label>Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>PSA-CLD-USNONE - Agreement Type</description>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(Co)-Development</fullName>
                </value>
                <value>
                    <fullName>(Co)-License</fullName>
                </value>
                <value>
                    <fullName>(Co)-Marketing</fullName>
                </value>
                <value>
                    <fullName>(Co)-Promotion</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Divestment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_PVA_Version__c</fullName>
        <description>PSA-CLD-USNONE - Current PVA Version</description>
        <label>Current PVA Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <description>PSA-CLD-USNONE - Customer Reference Number</description>
        <label>Customer Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>PSA-CLD-USNONE - Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>PSA-CLD-USNONE - The identifier for this record in its source system.  Used for data migration.</description>
        <externalId>true</externalId>
        <inlineHelpText>The identifier for this record in its source system.  Used for data migration.</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Licensing_Type__c</fullName>
        <description>PSA-CLD-USNONE - Licensing Type.</description>
        <label>Licensing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-License</fullName>
                </value>
                <value>
                    <fullName>Out-License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>PSA-CLD-USNONE - Partner.</description>
        <label>Partner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>PSA-CLD-USNONE - Project Code</description>
        <formula>IF ( !ISBLANK(Project__r.Project_Code__c), Project__r.Project_Code__c, Project__r.pse__Parent_Project__r.Project_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Project.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>PV Agreements</relationshipLabel>
        <relationshipName>PV_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Random_QC_Completed__c</fullName>
        <label>Random QC Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PV Agreement</label>
    <nameField>
        <displayFormat>PVA-{000000}</displayFormat>
        <label>PV Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PV Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>